manifests-system/manifests/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
  namespace: sock-shop
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 31125
    protocol: TCP
    name: http
  selector:
    name: front-end
