manifests-system/manifests/front-end-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - port: 80
      uri:
        exact: /
    - uri:
        prefix: /basket.html
    - uri:
        prefix: /cart
    - uri:
        prefix: /catalogue
    - uri:
        prefix: /category.html
    - uri:
        exact: /detail.html?id=808a2de1-1aaa-4c25-a9b9-6612e8f29a38
    - uri:
        exact: /detail.html?id=837ab141-399e-4c1f-9abc-bace40296bac
    - uri:
        exact: /detail.html?id=a0a4f044-b040-410d-8ead-4de0446aec7e
    - uri:
        exact: /detail.html?id=zzz4f044-b040-410d-8ead-4de0446aec7e
    - uri:
        exact: /login
    - uri:
        exact: /orders
    - uri:
        prefix: /api/v1/products
    - uri:
        prefix: /static
    - uri:
        exact: /index.html
    - uri:
        exact: /registry.html
    - uri:
        exact: /details.html
    - uri:
        exact: /health.html
    - uri:
        exact: /topbar.html
    - uri:
        exact: /navbar.html
    - uri:
        exact: /footer.html
    - uri:
        prefix: /css
    - uri:
        prefix: /js
    - uri:
        prefix: /img
    - uri:
        prefix: /detail


    route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        port:
          number: 80
